2008-01-02 André Schenk <andre@melior.s.bawue.de>
	* srcp-sm.c: Fixed time format for SM messages.

2008-01-02 Guido Scholz <guido.scholz@bayernline.de>
	* README.ibox: Outdated file removed.

2007-12-25 Guido Scholz <guido.scholz@bayernline.de>
	* stdincludes.h, *.c: obsolete stdincludes.h file removed.
	* io.c, srcp-command.c, clientservice.c, loconet.c: handle
	writing to socket more savely, also respecting client terminated
	connections (not perfect). 

2007-12-24 Guido Scholz <guido.scholz@bayernline.de>
	* io.*, srcp-info.c, srcp-command.c, loconet.c, clientservice.c:
	Substituted old code to write to a socket descriptor by a faster
	and interrupt save version.

2007-12-23 Guido Scholz <guido.scholz@bayernline.de>
	* dll.c, dll-s88.c, hsi-s88.c, i2c-dev.c, ib.c, li100.c,
	loconet.c, loopback.c, m605x.c, selectrix.c, zimo.c: Prevent bus
	threads from eating mutexes and condition variables. Re-reading
	the config file now should be possible without wasting system
	resources.

2007-12-21 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in, acinclude.m4 src/Makefile.am: Updated libxml2
	detection macro, now using CPPFLAGS.
	* clientservice.c, netservice.c, queue.*, srcp-gm.c,
	srcp-info.*, srcp-session.*: Individual queues for sessions to
	get generic messages (GM) deliverable to certain info sessions.

2007-12-19 Guido Scholz <guido.scholz@bayernline.de>
	* configure.in, acinclude.m4 src/Makefile.am, systemtest: Threads
	library detection macro added, obsolete systemtest file removed.

2007-11-24 Matthias Trute <mtrute@users.sourceforge.net>
	* imported most of the historical code from cvs to svn repository.

2007-11-20 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-ga.c: fixed wrong milli-second format for INFO GA (was
	e.g. »x.6« instead of »x.006«)

2007-11-20 Matthias Trute <mtrute@users.sf.net>
	* renamed getGL/setGL to cacheGetGL/cacheSetGL

2007-11-19 Frank Schmischke <frank.schmischke@t-online.de>